<resources>
    <string name="app_name">Theqah</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="are_you_forgot_password">Forgot password ?</string>
    <string name="do_you_have_a_new_account">Do you have a new account?</string>
    <string name="create_an_account">Create a new account</string>
    <string name="user_name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="you_already_have_an_account_log_in">You already have an account! log in</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="bank_account">Bank account + Commession </string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="about_app">About Tour</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="send">send</string>
    <string name="skip">skip</string>
    <string name="field_req">Field required</string>
    <string name="inv_email">Invalid email</string>
    <string name="back">Back</string>
    <string name="wait">Wait...</string>
    <string name="inv_em_ps">Invalid Email or Password</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>
    <string name="em_exist">Email or Phone number is exist</string>
    <string name="profile">Profile</string>
    <string name="general_settings">General Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language_settings">Language Settings</string>
    <string name="sar">SAR</string>
    <string name="no_details">No details</string>
    <string name="sign_in">Sign In</string>
    <string name="please_sign_in_or_sign_up">Please Sign In or Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="suc">Success !</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_name">Account Name</string>
    <string name="account_iban">Account IBAN</string>
    <string name="account_number">Account Number</string>
    <string name="ok">OK</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="select_a_picture_to_upload">Select a Picture to Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="done">Done</string>
    <string name="pass_short">Password to short</string>
    <string name="new_order">New Order</string>
    <string name="comments">Comments</string>
    <string name="promotional_video">Promotional video</string>
    <string name="guarantees">Guarantees</string>
    <string name="thiqah">Thiqah</string>
    <string name="mediator">Broker</string>
    <string name="financial">Financial</string>
    <string name="buyer">Buyer \n or \n beneficiary of the service</string>
    <string name="buyer2">Buyer or beneficiary of the service</string>

    <string name="seller">Seller \n or \n service provider</string>
    <string name="seller2">Seller or service provider</string>

    <string name="guide">User guide</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="inv_now">Invalid now</string>
    <string name="forget_password">Forget Password</string>
    <string name="recov_msg">Recover your account.We will send you confirm code to change your password</string>
    <string name="enter_code">Enter code</string>
    <string name="we_ll_never_share_or_sell_your_phone_number_your_privacy_is_100_guaranteed">We\'ll never share or sell your phone number your privacy is 100% guaranteed.</string>
    <string name="enter_the_sms_verification_code_below_that_was_sent_to_your_mobile_phone">Enter the SMS verification code below that was sent to your mobile phone</string>
    <string name="inc_code_verification">Incorrect code verification</string>
    <string name="you_will_receive_4_digit">You will receive 4 digit code on your mobile</string>
    <string name="resend">Resend Code</string>
    <string name="confirm">Confirm</string>
    <string name="share">Share</string>
    <string name="order_number">Order number :</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="purpose_of_the_transfer">Details of the agreement between the parties</string>
    <string name="item_value">Value of item or service</string>
    <string name="shipping_method">Shipping method</string>
    <string name="transfer_amount">Total amount with commission</string>
    <string name="transfer_image">Transfer image</string>
    <string name="period_to_close_deal">Agreed time</string>
    <string name="is_there_a_condition">Is there a condition?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="conditions">Conditions</string>
    <string name="the_second_person_phone">The second person phone</string>
    <string name="agree_commission">I agree that if the transaction is not terminated, the amount will be returned after deducting the commission</string>
    <string name="agree_terms">I agree to terms and condition of Theqah APP</string>
    <string name="choose">Choose</string>
    <string name="day">Day</string>
    <string name="more2">More</string>
    <string name="inv_phone">Invalid phone</string>
    <string name="ch_city">Choose city</string>
    <string name="ch_image">Choose image</string>
    <string name="ch_bank">Choose bank</string>
    <string name="cnt_comp">Cannot continue without accepting condition1</string>
    <string name="cont_comp2">Cannot complete without accepting terms and condition</string>
    <string name="transfer_bank">Transfer bank</string>
    <string name="item_image">Item Image</string>
    <string name="agree_commission2">I promise that the good or service will be as agreed with the second party and otherwise the amount will be refunded to the second party</string>
    <string name="inc_phone_pas">Incorrect phone number or password</string>
    <string name="ver_code_sent">Verification code is sent</string>
    <string name="order_sent_suc">Order sent successfully.the order number is</string>
    <string name="ch_period">Choose period</string>
    <string name="order_state">Order state :</string>
    <string name="details">Order details</string>
    <string name="beneficiary_transfer">Beneficiary transfer</string>
    <string name="shipping">Shipping</string>
    <string name="confirmation">Confirmation</string>
    <string name="transfer_error">Transfer Error</string>
    <string name="receipt_payment">Receipt of payment</string>
    <string name="my_order">My order</string>
    <string name="no_orders_to_display">No Orders to display</string>
    <string name="price">Price</string>
    <string name="no_notifications_to_display">No notifications to display</string>
    <string name="no_comments_to_display">No comments to display</string>
    <string name="send_order">Send Order</string>
    <string name="sa">SA</string>
    <string name="end_order">End order</string>
    <string name="add_rate">Add rate</string>
    <string name="add_comment">Add Comment</string>
    <string name="refused_transfer">Refused transfer</string>
    <string name="transfer_purpose">Transfer purpose :</string>
    <string name="received_money">Received money</string>
    <string name="appeal">Appeal</string>
    <string name="from">From</string>
    <string name="reason">Reason</string>
    <string name="rate_app">Rate app</string>
    <string name="images">Images</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="blokced">User is blocked</string>
    <string name="most">should 22 sell</string>
    <string name="most2">should 9 sell</string>
    <string name="app_fee">Application fee is</string>
    <string name="app_min">and the minimum is</string>


    <string name="complete_order">Complete Order</string>
    <string name="commission">Commission</string>
    <string name="more3">More</string>
    <string name="less">Less</string>
    <string name="application_fee_is">Application fee is</string>
    <string name="and_the_minimum_is">and the minimum is</string>
    <string name="item_or_service_value">Item or service value</string>
    <string name="value">Value</string>
    <string name="hot_line">الخط الساخن</string>
    <string name="phone_num">920028544</string>
    <string name="time">Time :</string>
    <string name="make_sure_that_you_are_in_the_safe_place_for_your_financial_transactions">Make sure that you are in the safe place for your financial transactions</string>
    <string name="only_number">Only numbers</string>
    <string name="before_make_order">Before making a new order, please transfer the amount and commission to Theqah App</string>
    <string name="new_password">New Password</string>
    <string name="phone_not_exist">Phone not exist</string>
    <string name="inv_code">Invalid code</string>
    <string name="show">Show</string>


</resources>
