<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_new_order"
            android:icon="@drawable/ic_nav_add"
            android:title="@string/new_order" />

        <item
            android:id="@+id/nav_my_order"
            android:icon="@drawable/ic_cart"
            android:title="@string/my_order" />
        <item
            android:id="@+id/nav_bank_account"
            android:icon="@drawable/ic_nav_bank"
            android:title="@string/bank_account" />
        <item
            android:id="@+id/nav_comments"
            android:icon="@drawable/ic_nav_group"
            android:title="@string/comments" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_nav_user_card"
            android:title="@string/about_app" />

        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_nav_video"
            android:title="@string/promotional_video" />

        <item
            android:id="@+id/nav_guarantees"
            android:icon="@drawable/ic_nav_shield"
            android:title="@string/guarantees" />
        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/ic_nav_check"
            android:title="@string/terms_and_conditions" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_nav_messaging"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/nav_lang"
            android:icon="@drawable/ic_lang"
            android:title="@string/language_settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_nav_logout"
            android:title="@string/logout" />
    </group>


</menu>
