<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"

    >
    <data>
        <variable
            name="lang"
            type="String" />
        <variable
            name="backListener"
            type="com.creative.share.apps.thiqah.interfaces.Listeners.BackListener" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities_fragments.activity_order_seller.OrderSellerActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:onClick="@{()->backListener.back()}"
                >
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_arrow_left"
                    android:tint="@color/white"
                    android:padding="8dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/white"
                    android:text="@string/appeal"
                    android:clickable="false"
                    android:longClickable="false"
                    android:textSize="15sp"
                    />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fitsSystemWindows="true"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bg"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:text="@string/order_number"
                    />
                <TextView
                    android:id="@+id/tvOrderNumber"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:background="@drawable/edt_order2_bg"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:gravity="center_vertical"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:text="@string/from"
                    android:layout_marginTop="8dp"
                    />
                <TextView
                    android:id="@+id/tvType"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:background="@drawable/edt_order2_bg"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:gravity="center_vertical"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:text="@string/reason"
                    android:layout_marginTop="8dp"
                    />
                <EditText
                    android:id="@+id/edtReason"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:background="@drawable/edt_order"
                    android:inputType="textMultiLine"
                    android:gravity="top"
                    android:padding="10dp"


                    />




                <LinearLayout
                    android:id="@+id/llUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    >
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_upload2"
                        android:layout_gravity="center_vertical"
                        android:tint="@color/colorPrimary"
                        android:clickable="false"
                        android:longClickable="false"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        android:text="@string/upload_picture"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:clickable="false"
                        android:longClickable="false"

                        />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    >

                </androidx.recyclerview.widget.RecyclerView>







                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/btn_login_bg"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="@string/send"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
