<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >
    <data>
        <variable
            name="lang"
            type="String" />
        <variable
            name="backListener"
            type="com.creative.share.apps.thiqah.interfaces.Listeners.BackListener" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities_fragments.activity_choose_order_type.ChooseOrderTypeActivity"
        android:background="@color/gray1"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:onClick="@{()->backListener.back()}"
                >
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_arrow_left"
                    android:tint="@color/white"
                    android:padding="8dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/forget_password"
                    android:textColor="@color/white"
                    android:clickable="false"
                    android:longClickable="false"
                    />

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="130dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:layout_marginTop="8dp"
            android:src="@drawable/logo"
            android:padding="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="15dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                android:layout_marginTop="50dp"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:text="@string/recov_msg"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"

                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_email"
                    android:padding="5dp"
                    android:tint="@color/colorPrimary"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"

                    />
            </LinearLayout>


            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edt_bg"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp"


                />

            <Button
                android:id="@+id/btnSend"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/btn_login_bg"
                android:text="@string/send"
                android:textColor="@android:color/white"
                android:textSize="15sp"

                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
