<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="bankModel"
            type="com.arab_developers_apps.theqah.models.Cities_Payment_Bank_Model.Bank" />
    </data>

    <androidx.cardview.widget.CardView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="2dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/white"
        app:contentPadding="5dp"
        app:cardElevation="3dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:text="@string/bank_name"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/tv_bank_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray4"
                        android:textSize="14sp"
                        android:text="@{bankModel.bank_name}"
                        android:layout_marginTop="8dp"

                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:text="@string/account_name"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/tv_account_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray4"
                        android:textSize="14sp"
                        android:text="@{bankModel.account_name}"
                        android:layout_marginTop="8dp"

                        />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:text="@string/account_iban"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/tv_account_iban"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray4"
                        android:textSize="14sp"
                        android:text="@{bankModel.account_iban}"
                        android:layout_marginTop="8dp"


                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:text="@string/account_number"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/tv_account_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray4"
                        android:textSize="14sp"
                        android:text="@{bankModel.account_number}"
                        android:layout_marginTop="8dp"

                        />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>
